[gd_scene load_steps=8 format=3 uid="uid://bsudc5jcsiy5h"]

[ext_resource type="Script" uid="uid://d1o2ajeyketfc" path="res://components/tracker/tracker.gd" id="1_7hxfb"]
[ext_resource type="PackedScene" uid="uid://cy8ex4qptydk3" path="res://components/tracker/tracker_screen.tscn" id="1_xpovp"]
[ext_resource type="AudioStream" uid="uid://bpu4y4mi2sw4d" path="res://assets/sounds/water-drop-3-84577.ogg" id="3_yj0hq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xpovp"]
vertex_color_use_as_albedo = true
roughness = 0.0
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 10.0
clearcoat_roughness = 0.13

[sub_resource type="ViewportTexture" id="ViewportTexture_xpovp"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7hxfb"]
metallic = 1.0
roughness = 0.86

[sub_resource type="SphereShape3D" id="SphereShape3D_7hxfb"]

[node name="Tracker" type="Node3D"]
script = ExtResource("1_7hxfb")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(512, 256)
render_target_update_mode = 4

[node name="TrackerScreen" parent="SubViewport" node_paths=PackedStringArray("tracker") instance=ExtResource("1_xpovp")]
unique_name_in_owner = true
position = Vector2(256, 256)
scale = Vector2(0.9, 0.9)
tracker = NodePath("../..")
tracker_sprite_rotation = 3.400000000008731

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.16, 0, 0, 0, -6.993822e-09, 0.99999994, 0, -0.16, -4.3711385e-08, 0, 0.052256107, -0.0023272038)
material_overlay = SubResource("StandardMaterial3D_xpovp")
gi_mode = 2
modulate = Color(1, 0, 0, 1)
texture = SubResource("ViewportTexture_xpovp")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.43247396, 0)
material_override = SubResource("StandardMaterial3D_7hxfb")
gi_mode = 2

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4331665, -0.008636475)
size = Vector3(0.87109375, 0.13366699, 0.49945068)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7513803, 0)
operation = 2
size = Vector3(0.8, 0.5348633, 0.40722656)

[node name="ScanArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScanArea"]
shape = SubResource("SphereShape3D_7hxfb")

[node name="RayCast" type="RayCast3D" parent="ScanArea"]
unique_name_in_owner = true
enabled = false
target_position = Vector3(0, 0, -1)
collision_mask = 2

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_yj0hq")
pitch_scale = 0.23

[connection signal="body_entered" from="ScanArea" to="." method="_on_scan_area_body_entered"]
